--- a/image/99-dav-svn.conf
+++ b/image/99-dav-svn.conf
@@ -1,3 +1,7 @@
+# needed, but dunny why. on startup there is a log indicating they are already loaded..
+LoadModule dav_module           modules/mod_dav.so
+LoadModule dav_fs_module        modules/mod_dav_fs.so
+
 LoadModule dav_svn_module       modules/mod_dav_svn.so
 LoadModule authz_svn_module     modules/mod_authz_svn.so
 
