--- a/image/zz-dav-svn.conf
+++ b/image/zz-dav-svn.conf
@@ -6,8 +6,8 @@ LoadModule authz_svn_module     modules/mod_authz_svn.so
    SVNParentPath /var/svn
    AuthType Basic
    AuthName "Subversion Repository"
-   AuthUserFile /etc/apache2/dav_svn.passwd
-   AuthzSVNAccessFile /etc/apache2/dav_svn.authz
+   AuthUserFile /etc/apache2/svn-auth/dav_svn.passwd
+   AuthzSVNAccessFile /etc/apache2/svn-auth/dav_svn.authz
    Require valid-user
 </Location>
 
